denine fixed the overflow on the div

--- a/app/assets/stylesheets/friends.css.scss
+++ b/app/assets/stylesheets/friends.css.scss
@@ -8,6 +8,7 @@
 
 .full_width {
 	 display: block;
+	 overflow: hidden;
 }
 
 #normal_friends_list {
